fix wrapping left nav via CSS hack

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,7 +7,14 @@
   }
 
 /* -----------------------------------------------
-Overriding default theme configuration and classes 
+Fix nested left hand nav wrapping mid word
+--------------------------------------------------*/
+.hextra-scrollbar, .hextra-scrollbar * {
+    scrollbar-gutter: auto;
+}
+
+/* -----------------------------------------------
+Overriding default theme configuration and classes
 --------------------------------------------------*/
 
 /* Colors */
